--- a/backend/ai_blog_app/templates/all-blogs.html
+++ b/backend/ai_blog_app/templates/all-blogs.html
@@ -11,7 +11,7 @@
     <body class="flex flex-col min-h-screen bg-gray-100 font-sans antialis">
 
         <!-- Navbar -->
-        <nav class="bg-blue-600 p-4 text-white flex justify-between">
+        <nav class="bg-blue-600 p-4 text-white flex justify-between items-center">
             <div>
                 <h1 class="text-3xl font-bold">AI Blog Generator</h1>
             </div>
