--- a/backend/ai_blog_app/templates/signup.html
+++ b/backend/ai_blog_app/templates/signup.html
@@ -13,8 +13,8 @@
                 <h1 class="text-3xl font-bold">AI Blog Generator</h1>
             </div>
             <div class="space-x-2">
-                <a href="#" class="text-white hover:underline">Logout</a>
-                <a href="#" class="text-white hover:underline">Signup</a>
+                <a href="login" class="text-white hover:underline">Logout</a>
+                <a href="signup" class="text-white hover:underline">Signup</a>
             </div>
         </nav>
 
