--- a/backend/ai_blog_app/templates/signup.html
+++ b/backend/ai_blog_app/templates/signup.html
@@ -25,7 +25,17 @@
             <div class="bg-white p-8 shadow-md rounded-lg max-w-md w-full">
 
                 <!-- Login Form -->
-                <form action="submit" class="space-y-4">
+                <form action="" class="space-y-4" method="POST">
+                    {% csrf_token %}
+
+                    {% if error_message %}
+                        <div class="flex justify-center text-red-500">
+                            <h2>
+                                {{ error_message }}
+                            </h2>
+                        </div>
+                    {% endif %}
+
                     <h2 class="text-xl font-semibold">Signup</h2>
                     <div>
                         <label for="username" class="block mb-1 font-medium">Username</label>
