--- a/backend/ai_blog_app/templates/all-blogs.html
+++ b/backend/ai_blog_app/templates/all-blogs.html
@@ -15,7 +15,7 @@
             <div>
                 <h1 class="text-3xl font-bold">AI Blog Generator</h1>
             </div>
-            <div>
+            <div class="space-x-2">
                 <a href="#" class="text-white hover:underline">Logout</a>
             </div>
         </nav>
