--- a/backend/ai_blog_app/templates/all-blogs.html
+++ b/backend/ai_blog_app/templates/all-blogs.html
@@ -16,6 +16,7 @@
                 <h1 class="text-3xl font-bold">AI Blog Generator</h1>
             </div>
             <div class="space-x-2">
+                <a href="#" class="text-white hover:underline">Welcome, {{ user.username }}</a>
                 <a href="#" class="text-white hover:underline">Logout</a>
             </div>
         </nav>
