--- a/backend/ai_blog_app/templates/index.html
+++ b/backend/ai_blog_app/templates/index.html
@@ -17,7 +17,7 @@
             </div>
             <div class="space-x-2">
                 <a href="#" class="text-white hover:underline">Welcome, {{ user.username }}</a>
-                <a href="#" class="text-white hover:underline">Logout</a>
+                <a href="logout" class="text-white hover:underline">Logout</a>
             </div>
         </nav>
 
