--- a/backend/ai_blog_app/templates/index.html
+++ b/backend/ai_blog_app/templates/index.html
@@ -5,7 +5,49 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>AI Blog Generator</title>
         <script src="https://cdn.tailwindcss.com"></script>
-        <link href="static/styles.css" rel="stylesheet">
+        <!-- <link href="static/styles.css" rel="stylesheet"> -->
+
+        <style>
+            @keyframes rotate {
+                from {
+                    transform: rotate(0deg);
+                }
+                to { 
+                    transform: rotate(360deg);
+                }
+            }
+             
+            
+             @-webkit-keyframes rotate {
+                from {
+                    -webkit-transform: rotate(0deg);
+                }
+                to { 
+                    -webkit-transform: rotate(360deg);
+                }
+            }
+            
+            .load {
+                width: 100px;
+                height: 100px;
+                margin: 50px auto 0;
+                border:solid 10px rgb(81, 81, 252);
+                border-radius: 50%;
+                border-right-color: transparent;
+                border-bottom-color: transparent;
+                 -webkit-transition: all 0.5s ease-in;
+                -webkit-animation-name:             rotate; 
+                -webkit-animation-duration:         1.0s; 
+                -webkit-animation-iteration-count:  infinite;
+                -webkit-animation-timing-function: linear;
+                    
+                     transition: all 0.5s ease-in;
+                animation-name:             rotate; 
+                animation-duration:         1.0s; 
+                animation-iteration-count:  infinite;
+                animation-timing-function: linear;
+            }
+        </style>
     </head>
 
     <body class="flex flex-col min-h-screen bg-gray-100 font-sans antialis">
@@ -50,12 +92,10 @@
                 <!-- Generate Blog Display Section -->
                 <section class="mt-10 flex-grow">
                     <h2 class="text-xl mb-4 font-semibold">Generated Blog Content</h2>
-                    <div id="blogContent" class="mt-2 text-gray-700 space-y-4">
-
-                        <!-- Section for Loading Circle -->
-                        <div style="display: none" id="loading-circle" class="load"></div>
-
-                    </div>
+                    <div id="blogContent" class="mt-2 text-gray-700 space-y-4"></div>
+                    
+                    <!-- Section for Loading Circle -->
+                    <div id="loading-circle" class="load hidden"></div>
                 </section>
             </div>
         </div>
@@ -63,5 +103,44 @@
         <footer class="text-center p-4 text-black mt-6">
             Powered by <a href="#">OpenAI</a>
         </footer>
+
+        <script>
+            document.getElementById('generateBlogButton').addEventListener('click', async () => {
+                const youtubeLink = document.getElementById('youtubeLink').value;
+                const loadingIndicator = document.getElementById('loading-circle');
+                const blogContent = document.getElementById('blogContent');
+            
+                if (youtubeLink) {
+                    // document.getElementById('loading-circle').style.display = 'block';
+                    loadingIndicator.classList.remove('hidden');
+                    blogContent.innerHTML = '';
+            
+                    const endpointUrl = '/generate-blog';
+            
+                    try {
+                        const response = await fetch(endpointUrl, {
+                            method: 'POST',
+                            headers: {
+                                'Content-Type': 'application/json',
+                            },
+                            body: JSON.stringify({ link: youtubeLink })
+                        });
+            
+                        const data = await response.json();
+            
+                        blogContent.innerHTML = data.content;
+
+                    } catch (error) {
+                        console.error("Error occured:", error);
+                        alert("Something went wrong. Please try again later.");
+
+                    }
+                    loadingIndicator.classList.add('hidden');
+                    // document.getElementById('loading-circle').style.display = 'none';
+                } else {
+                    alert("Please enter a YouTube link.")
+                }
+            })
+        </script>
     </body>
 </html>
