feat: users can now view all of the previous youtube video summaries

--- a/backend/ai_blog_app/templates/all-blogs.html
+++ b/backend/ai_blog_app/templates/all-blogs.html
@@ -29,18 +29,14 @@
                 <section>
                     <h2 class="text-xl font-semibold">All Blog Posts</h2>
                     <div class="space-y-4">
+
+                        {% for summary in summaries reversed %}
                         <div class="border border-gray-300 p-4 rounded-lg">
-                            <h3 class="text-lg font-semibold">Blog Post Title 1</h3>
-                            <p>This is the content of the blog post...</p>
+                            <h3 class="text-lg font-semibold">{{ summary.youtube_title }}</h3>
+                            <p>{{ summary.generated_content|truncatechars:100 }}</p>
                         </div>
-                        <div class="border border-gray-300 p-4 rounded-lg">
-                            <h3 class="text-lg font-semibold">Blog Post Title 2</h3>
-                            <p>This is the content of the blog post...</p>
-                        </div>
-                        <div class="border border-gray-300 p-4 rounded-lg">
-                            <h3 class="text-lg font-semibold">Blog Post Title 3</h3>
-                            <p>This is the content of the blog post...</p>
-                        </div>
+                        {% endfor %}
+
                     </div>
                 </section>
             </div>
