--- a/backend/ai_blog_app/templates/all-blogs.html
+++ b/backend/ai_blog_app/templates/all-blogs.html
@@ -17,6 +17,7 @@
             </div>
             <div class="space-x-2">
                 <a href="#" class="text-white hover:underline">Welcome, {{ user.username }}</a>
+                <a href="/summary-list" class="text-white hover:underline mx-4">Saved Summaries</a>
                 <a href="logout" class="text-white hover:underline">Logout</a>
             </div>
         </nav>
@@ -31,10 +32,12 @@
                     <div class="space-y-4">
 
                         {% for summary in summaries reversed %}
-                        <div class="border border-gray-300 p-4 rounded-lg">
-                            <h3 class="text-lg font-semibold">{{ summary.youtube_title }}</h3>
-                            <p>{{ summary.generated_content|truncatechars:100 }}</p>
-                        </div>
+                        <a href="summary-details/{{ summary.id }}">
+                            <div class="border border-gray-300 p-4 rounded-lg">
+                                <h3 class="text-lg font-semibold">{{ summary.youtube_title }}</h3>
+                                <p>{{ summary.generated_content|truncatechars:100 }}</p>
+                            </div>
+                        </a>
                         {% endfor %}
 
                     </div>
