--- a/backend/ai_blog_app/templates/blog-details.html
+++ b/backend/ai_blog_app/templates/blog-details.html
@@ -17,6 +17,7 @@
             </div>
             <div class="space-x-2">
                 <a href="#" class="text-white hover:underline">Welcome, {{ user.username }}</a>
+                <a href="/summary-list" class="text-white hover:underline mx-4">Saved Summaries</a>
                 <a href="logout" class="text-white hover:underline">Logout</a>
             </div>
         </nav>
@@ -25,15 +26,17 @@
         <div class="container mx-auto mt-10 px-4 sm:px-0">
             <div class="max-w-3xl mx-auto bg-white p-6 rounded-lg shadow-md">
 
-                <!-- Blog Post Section -->
+                <!-- Summary Section -->
                 <section>
-                    <h2 class="text-xl font-semibold">Blog Post Details</h2>
+                    <h2 class="text-xl font-semibold">Summary Details</h2>
                     <div class="border border-gray-300 p-4 rounded-lg">
-                        <h3 class="text-lg font-semibold">Blog Post Title</h3>
-                        <p class="text-gray-700">This is the content of the blog post...</p>
+                        <h3 class="text-lg font-semibold">{{ summary_detail.youtube_title }}</h3>
+                        <p class="text-gray-700">{{ summary_detail.generated_content }}</p>
                         <hr class="my-4 border-gray-300">
-                        <h4 class="text-lg font-semibold mt-4">Youtube Title</h4>
-                        <a href="#" class="text-blue-600 hover:underline">http://www.youtube.com</a>
+                        <h4 class="text-lg font-semibold">Youtube Title</h4>
+                        <p class="text-gray-700">{{ summary_detail.youtube_title }}</p>
+                        <h4 class="text-lg font-semibold mt-4">Youtube Link</h4>
+                        <a href="{{ summary_detail.youtube_link }}" class="text-blue-600 hover:underline">{{ summary_detail.youtube_link }}</a>
                     </div>
                 </section>
             </div>
