--- a/backend/ai_blog_app/templates/index.html
+++ b/backend/ai_blog_app/templates/index.html
@@ -59,6 +59,7 @@
             </div>
             <div class="space-x-2">
                 <a href="#" class="text-white hover:underline">Welcome, {{ user.username }}</a>
+                <a href="/summary-list" class="text-white hover:underline mx-4">Saved Summaries</a>
                 <a href="logout" class="text-white hover:underline">Logout</a>
             </div>
         </nav>
